<resources>
    <string name="app_name">MediAid</string>
    <string name="alarmName">Medicine Name</string>
    <string name="alarmTime">Time</string>
    <string name="days">Day</string>
    <string name="alarmNotes">Notes</string>
    <string name="medicalTimer">MEDICINE ALARM</string>
    <string name="alarmToolbar">ALARM DETAILS</string>
    <string name="alarmNumber">ALARM 1</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="savealarm">SAVE</string>
    <string name="cancelalarm">CANCEL</string>
    <string name="datepick">PICK DATES</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="view_all">View All</string>
    <string name="weight_kg">Weight(KG)</string>
    <string name="height">Height(CM)</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="bmi">BMI</string>
    <string name="height_cm">Height(Cm)</string>
    <string name="click">click</string>
    <string name="verdict">Verdict</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
