<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="228dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/applogo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="#F2F4F8"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_action_name"
        android:hint="@string/email"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#F2F4F8"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_action_pass"
        android:hint="@string/password"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#123456"
        android:hint="@string/login"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

    <EditText
        android:id="@+id/notregister"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#B81414"
        android:text="@string/not_registered"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#D3C122"
        android:hint="@string/register"
        android:textSize="20dp" />


</LinearLayout>