<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/w">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="202dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/applogo" />

    <EditText
        android:id="@+id/eml"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="#F2F4F8"
        android:drawableLeft="@drawable/ic_action_name"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/pass"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_action_pass"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#F2F4F8"
        android:hint="@string/password" />
    <EditText
        android:id="@+id/cnfpas"
        android:drawableLeft="@drawable/ic_action_cnf"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#F2F4F8"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#123456"
        android:hint="@string/register"
        android:textSize="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

    <EditText
        android:id="@+id/alreg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:background="#B81414"
        android:text="Already Registered?"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/vi"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#D3C122"
            android:hint="Login"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>